syntax = "proto3";
package protos.network;
option java_multiple_files = true;
//option java_generic_services = true;

service NetworkService {
    rpc sendNetworkMessage(NetworkMessage) returns (NetworkResponse);
}

message NetworkMessage {
    string messageType = 1;
    int32 senderId = 2;
    int32 senderPort = 3;
    int64 timestamp = 4;
    string additionalPayload = 5;
}

message NetworkResponse {
    string messageType = 1;
    int32 senderId = 2;
    int32 senderPort = 3;
    int64 timestamp = 4;
    string additionalPayload = 5;
}